--- a/app/views/tasks/create.js.erb
+++ b/app/views/tasks/create.js.erb
@@ -1,2 +1,3 @@
+alert("DDDDD");
 document.querySelectorAll(".notice")[0].textContent = "<%= @flash %>";
-document.querySelector("#card-list").insertAdjacentHTML("beforeend", "<%= j render 'task', task: @task %>")
+document.querySelector(".card-list").insertAdjacentHTML("beforeend", "<%= j render 'task', task: @task %>")
